--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "10.0.1",
     "nprogress": "^0.2.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@tailwindcss/ui": "^0.7.2",
