--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^16.9.9",
     "postcss": "^8.2.5",
     "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.2.1",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.0.5"
   }
