--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@types/axios": "^0.14.0",
+    "@hcaptcha/react-hcaptcha": "^0.3.2",
     "axios": "^0.21.1",
     "next": "10.0.1",
     "nprogress": "^0.2.0",
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "@tailwindcss/ui": "^0.7.2",
+    "@types/axios": "^0.14.0",
+    "@types/hcaptcha__react-hcaptcha": "^0.1.4",
     "@types/node": "^14.14.7",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^16.9.56",
