--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hcaptcha/react-hcaptcha": "^0.3.2",
     "axios": "^0.21.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "10.0.1",
     "nprogress": "^0.2.0",
     "react": "17.0.1",
@@ -21,6 +22,7 @@
     "@tailwindcss/ui": "^0.7.2",
     "@types/axios": "^0.14.0",
     "@types/hcaptcha__react-hcaptcha": "^0.1.4",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.7",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^16.9.56",
