--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hcaptcha/react-hcaptcha": "^0.3.2",
+    "@tailwindcss/typography": "^0.4.0",
     "@types/react-linkify": "^1.0.0",
     "axios": "^0.21.1",
     "jsonwebtoken": "^8.5.1",
