--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "next": "10.0.1",
     "nprogress": "^0.2.0",
+    "pretty-bytes": "^5.6.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-linkify": "^1.0.0-alpha",
