--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hcaptcha/react-hcaptcha": "^0.3.2",
     "@tailwindcss/typography": "^0.4.0",
     "@types/react-linkify": "^1.0.0",
+    "amplitude-js": "^7.4.4",
     "axios": "^0.21.1",
     "jsonwebtoken": "^8.5.1",
     "next": "10.0.1",
