--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-linkify": "^1.0.0-alpha",
+    "react-query": "^3.13.5",
     "react-srv3": "^1.0.3",
     "timeago.js": "^4.0.2"
   },
