doc: update maintenance status

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,8 @@
 {
-  "trailingComma": "es5",
+  "useTabs": false,
   "tabWidth": 2,
   "semi": true,
-  "singleQuote": false
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "proseWrap": "always"
 }
