--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-linkify": "^1.0.1",
     "amplitude-js": "^8.9.1",
     "axios": "^0.24.0",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^8.5.1",
     "next": "12.0.3",
     "nprogress": "^0.2.0",
