--- a/helmchart/values.yaml
+++ b/helmchart/values.yaml
@@ -3,11 +3,11 @@
 # Declare variables to be passed into your templates.
 
 # Override Kubernetes version
-kubeVersion: ""
+kubeVersion: ''
 
 imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
+nameOverride: ''
+fullnameOverride: ''
 
 # Annotations to add to all deployed objects
 commonAnnotations: {}
@@ -106,12 +106,13 @@ ingress:
   enabled: false
 
   # IngressClass that will be be used to implement the Ingress
-  ingressClassName: ""
+  ingressClassName: ''
 
   # Ingress path type
   pathType: ImplementationSpecific
 
-  annotations: {}
+  annotations:
+    {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
@@ -122,7 +123,8 @@ ingress:
   #    hosts:
   #      - archive-browser.local
 
-resources: {}
+resources:
+  {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
