--- a/helmchart/Chart.yaml
+++ b/helmchart/Chart.yaml
@@ -1,7 +1,7 @@
 name: archive-browser
 version: v0.0.1
 description: 'Web UI for Ragtag Archive'
-home: https://gitlab.com/aonahara/archive-browser
+home: https://github.com/ragtag-archive/archive-browser
 dependencies:
   - name: common
     version: 1.7.1
